三个页面添加了内容

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -67,15 +67,13 @@
           </ion-card-content>
         </ion-card>
 
-  <ion-card>
-    <ion-item>
-        <ion-icon name="hand"></ion-icon>
-      <ion-label>参与评论</ion-label>
-      <ion-button fill="outline" slot="end">View</ion-button>
-    </ion-item>
-  
-    <ion-card-content>
-      本科双一流，研究生双非是怎样一种体验？
-    </ion-card-content>
-  </ion-card>
+        <ion-card>
+            <ion-card-header>                      
+              <ion-card-title>PK</ion-card-title>
+              <ion-card-title>名校毕业生</ion-card-title>
+            </ion-card-header>
+            <ion-card-content>
+                985、211毕业生真的好就业吗？
+            </ion-card-content>
+          </ion-card>
 </ion-content>
