--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,9 +1,81 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Tab Two
+        <ion-searchbar placeholder="Filter Schedules"></ion-searchbar>
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+    <ion-card>
+        <ion-item>
+            <ion-icon name="hand"></ion-icon>
+          <ion-label>参与评论</ion-label>
+          <ion-button fill="outline" slot="end">View</ion-button>
+        </ion-item>
+      
+        <ion-card-content>
+          本科双一流，研究生双非是怎样一种体验？
+        </ion-card-content>
+      </ion-card>
+
+      <ion-card>
+          <ion-item>
+              <ion-icon name="hand"></ion-icon>
+            <ion-label>参与评论</ion-label>
+            <ion-button fill="outline" slot="end">View</ion-button>
+          </ion-item>
+        
+          <ion-card-content>
+            本科双一流，研究生双非是怎样一种体验？
+          </ion-card-content>
+        </ion-card>
+
+        <ion-card>
+            <ion-item>
+                <ion-icon name="hand"></ion-icon>
+              <ion-label>参与评论</ion-label>
+              <ion-button fill="outline" slot="end">View</ion-button>
+            </ion-item>
+          
+            <ion-card-content>
+              本科双一流，研究生双非是怎样一种体验？
+            </ion-card-content>
+          </ion-card>
+
+          <ion-card>
+              <ion-item>
+                  <ion-icon name="hand"></ion-icon>
+                <ion-label>参与评论</ion-label>
+                <ion-button fill="outline" slot="end">View</ion-button>
+              </ion-item>
+            
+              <ion-card-content>
+                本科双一流，研究生双非是怎样一种体验？
+              </ion-card-content>
+            </ion-card>
+
+            <ion-card>
+                <ion-item>
+                    <ion-icon name="hand"></ion-icon>
+                  <ion-label>参与评论</ion-label>
+                  <ion-button fill="outline" slot="end">View</ion-button>
+                </ion-item>
+              
+                <ion-card-content>
+                  本科双一流，研究生双非是怎样一种体验？
+                </ion-card-content>
+              </ion-card>
+
+              <ion-card>
+                  <ion-item>
+                      <ion-icon name="hand"></ion-icon>
+                    <ion-label>参与评论</ion-label>
+                    <ion-button fill="outline" slot="end">View</ion-button>
+                  </ion-item>
+                
+                  <ion-card-content>
+                    本科双一流，研究生双非是怎样一种体验？
+                  </ion-card-content>
+                </ion-card>
+</ion-content>
