--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,7 +1,17 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Tab Three
+
+        <ion-list>
+            <ion-item *ngFor="let item of items">
+              <ion-thumbnail slot="start">
+                <ion-img [src]="item.src"></ion-img>
+              </ion-thumbnail>
+              <ion-label>{{item.text}}</ion-label>
+            </ion-item>
+          </ion-list>
+
+          <ion-card-title>昵称</ion-card-title>
     </ion-title>
   </ion-toolbar>
 </ion-header>
