页面3加了点东西

--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,19 +1,12 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-
-        <ion-list>
-            <ion-item *ngFor="let item of items">
-              <ion-thumbnail slot="start">
-                <ion-img [src]="item.src"></ion-img>
-              </ion-thumbnail>
-              <ion-label>{{item.text}}</ion-label>
-            </ion-item>
-          </ion-list>
-
-          <ion-card-title>昵称</ion-card-title>
+      <ion-icon name="logo-github"></ion-icon>     
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+
+<ion-content>
+  
+</ion-content>
