孙玉龙上传代码

--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,4 +1,18 @@
-.welcome-card ion-img {
-  max-height: 35vh;
-  overflow: hidden;
+
+.happyLogo{
+  width: 40px;
+  position: absolute;
+  top:10px;
+  left: 10px;
+}
+ion-title{
+  float: left;
+  width: 100%;
+  text-align: center;
+}
+.sadLogo{
+  width: 40px;
+  position: absolute;
+  top:10px;
+  right: 10px;
 }
