--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,79 +1,33 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>
-      <ion-searchbar placeholder="Filter Schedules"></ion-searchbar>
-      <ion-row>
-          <ion-col size="4">
-              <ion-button>
-                  <ion-icon slot="start" name="star"></ion-icon>
-                 推荐
-                </ion-button>
-          </ion-col>
-          <ion-col size="4">
-              <ion-button>
-                  热榜
-                  <ion-icon slot="start" name="star"></ion-icon>
-                </ion-button>  
-          </ion-col>
-          <ion-col size="4">
-              <ion-button>
-                  <ion-icon slot="start" name="star"></ion-icon>
-                  关注
-                </ion-button>
-          </ion-col>
-        </ion-row>   
-    </ion-title>
+  <ion-toolbar color="dark">
+    <img ion-right src="assets/imgs/happy.png" class="happyLogo" />
+    <ion-title>数据展示</ion-title>
+    <img ion-right src="assets/imgs/sad.png" class="sadLogo" />
   </ion-toolbar>
 </ion-header>
 
+
 <ion-content>
   <ion-card>
-    <ion-card-header>                      
+    <ion-card-header color="primary">
       <ion-card-title>PK</ion-card-title>
-      <ion-card-title>大学毕业生</ion-card-title>
+      <ion-card-title>毕业之后去大公司上班是一个好的选择吗？</ion-card-title>
     </ion-card-header>
     <ion-card-content>
-      非985、211大学毕业生选择考公务员是一条好的出路吗？
+        <ion-button expand="block" color="success" (click)="analysis()">开始分析</ion-button>
     </ion-card-content>
   </ion-card>
 
-  <ion-card>
-      <ion-card-header>                      
-        <ion-card-title>PK</ion-card-title>
-        <ion-card-title>学历</ion-card-title>
-      </ion-card-header>
-      <ion-card-content>
-        博士研究生受热捧导致考研人数暴增？
-      </ion-card-content>
-    </ion-card>
+  <ion-card *ngFor="let comment of comments">
+    <ion-item>
+      <ion-icon name="hand"></ion-icon>
+      <ion-label><span style="color: coral">{{comment.user}}</span>参与评论</ion-label>
+      <ion-button fill="outline" slot="end">查看</ion-button>
+    </ion-item>
 
-    <ion-card>
-        <ion-card-header>                         
-          <ion-card-title>PK</ion-card-title>
-          <ion-card-title>就业行情</ion-card-title>
-        </ion-card-header>
-        <ion-card-content>
-         高技能工人始终是市场短缺的？
-        </ion-card-content>
-      </ion-card>
+    <ion-card-content>
+        {{comment.comment}}
+    </ion-card-content>
+  </ion-card>
 
-      <ion-card>
-          <ion-card-header>                      
-            <ion-card-title>PK</ion-card-title>
-            <ion-card-title>名校毕业生</ion-card-title>
-          </ion-card-header>
-          <ion-card-content>
-              985、211毕业生真的好就业吗？
-          </ion-card-content>
-        </ion-card>
-
-        <ion-card>
-            <ion-card-header>                      
-              <ion-card-title>PK</ion-card-title>
-              <ion-card-title>名校毕业生</ion-card-title>
-            </ion-card-header>
-            <ion-card-content>
-                985、211毕业生真的好就业吗？
-            </ion-card-content>
-          </ion-card>
 </ion-content>
