--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -1,1 +1,19 @@
 
+
+.happyLogo{
+    width: 40px;
+    position: absolute;
+    top:10px;
+    left: 10px;
+  }
+  ion-title{
+    float: left;
+    width: 100%;
+    text-align: center;
+  }
+  .sadLogo{
+    width: 40px;
+    position: absolute;
+    top:10px;
+    right: 10px;
+  }
