--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -3,17 +3,17 @@
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
         <ion-icon name="list-box"></ion-icon>
-      <ion-label>首页</ion-label>
+      <ion-label>样例数据展示</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
         <ion-icon name="paw"></ion-icon>
-      <ion-label>评论</ion-label>
+      <ion-label>数据分析结果</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
         <ion-icon name="person"></ion-icon>
-      <ion-label>我</ion-label>
+      <ion-label>个人中心</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
