我把pk去掉了

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -9,7 +9,7 @@
 <ion-content>
   <ion-card>
     <ion-card-header color="primary">
-      <ion-card-title>PK</ion-card-title>
+      <ion-card-title></ion-card-title>
       <ion-card-title>毕业之后去大公司上班是一个好的选择吗？</ion-card-title>
     </ion-card-header>
     <ion-card-content>
