--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -30,7 +30,7 @@
     <div class="header">
       <div class="avatar">
         <ion-avatar>
-          <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y">
+          <img src="../../assets/imgs/avatar.jpg">
         </ion-avatar>
       </div>
     </div>
