--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -7,7 +7,7 @@
 </ion-header>
 <ion-content>
 
-  <ion-searchbar placeholder="Filter Schedules"></ion-searchbar>
+  <ion-searchbar placeholder="Filter Schedules" (click)="search()"></ion-searchbar>
   <ion-row>
     <ion-col size="4">
       <ion-button>
